--- a/scss/_espacos.scss
+++ b/scss/_espacos.scss
@@ -29,7 +29,11 @@
 }
 
 .espaco-consulta-dominio {
-	height: 151px;
+	height: 91px;
+}
+
+.espaco-consulta-dominio-interno {
+	height: 60px;
 }
 
 .voltar-topo {
