--- a/scss/_responsividade.scss
+++ b/scss/_responsividade.scss
@@ -328,11 +328,11 @@
 	}
 
 	.espaco-consulta-dominio {
-		height: 120px;
+		height: 152px;
 	}
 	
 	.espaco-consulta-dominio-interno {
-		height: 60px;
+		height: 40px;
 	}
 	
 	.animate-character-fale-conosco {
@@ -394,7 +394,11 @@
 	}
 
 	.espaco-consulta-dominio {
-		height: 152px;
+		height: 112px;
+	}
+	
+	.espaco-consulta-dominio-interno {
+		height: 56px;
 	}
 
 	.deseja-mensagem {
