--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -77,6 +77,18 @@
 	font-size: 32px;
 }
 
+.font-size-36 {
+	font-size: 36px;
+}
+
+.font-size-40 {
+	font-size: 40px;
+}
+
+.font-size-44 {
+	font-size: 44px;
+}
+
 .font-size-48 {
 	font-size: 48px
 }
