--- a/scss/_espacos.scss
+++ b/scss/_espacos.scss
@@ -25,11 +25,11 @@
 }
 
 .espaco-plano-rapido {
-	height: 30px;
+	height: 50px;
 }
 
 .espaco-consulta-dominio {
-	height: 91px;
+	height: 73px;
 }
 
 .espaco-consulta-dominio-interno {
@@ -67,4 +67,8 @@
 
 .espaco-seta-endereco-contato {
 	height: 110px;
+}
+
+.espaco-fale-conosco {
+	height: 50px;
 }
