--- a/scss/_imagens.scss
+++ b/scss/_imagens.scss
@@ -5,7 +5,7 @@
 	position: relative;
 	height: 100%;
 	min-height: 500px;
-	opacity: 0.7;
+	//opacity: 0.7;
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
