--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1340,21 +1340,29 @@ div#mapa {
 }
 
 /* line 7, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_navbar.scss */
-ul.navbar-nav > li.nav-item > a.nav-link {
+ul.navbar-nav > li.nav-item > a.nav-link,
+a.dropdown-item {
   background-color: #f8f9fa;
   color: #007bff;
 }
 
-/* line 12, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_navbar.scss */
+/* line 13, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_navbar.scss */
 .navbar-toggler:hover,
 .navbar-toggler:focus,
 ul.navbar-nav > li.nav-item > a.nav-link:hover,
 ul.navbar-nav > li.nav-item > a.nav-link:focus,
-ul.navbar-nav > li.nav-item > div.dropdown-menu > a.dropdown-item:hover,
-ul.navbar-nav > li.nav-item > div.dropdown-menu > a.dropdown-item:focus {
+ul.navbar-nav > li.nav-item > ul.dropdown-menu > a.dropdown-item:hover,
+ul.navbar-nav > li.nav-item > ul.dropdown-menu > a.dropdown-item:focus,
+a.dropdown-item:hover,
+a.dropdown-item:focus {
   background-color: #007bff;
   border-radius: 10px;
   color: #f8f9fa;
+}
+
+/* line 26, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_navbar.scss */
+ul.navbar-nav li.dropdown:hover ul.dropdown-menu {
+  display: block;
 }
 
 /* line 3, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_parallax.scss */
