--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -251,6 +251,12 @@ h3.madelina {
 	font-size: 15px;
 }
 
+@keyframes textclip {
+	to {
+		background-position: 200% center;
+	}
+}
+
 // FORMATAÇÃO DE FONTES
 .formatacao1 {
     text-decoration: underline;
